button spacing fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -737,6 +737,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
@@ -752,10 +756,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
-}
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
 }
 .mb-12 {
   margin-bottom: 3rem;
@@ -781,6 +781,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mb-16 {
   margin-bottom: 4rem;
 }
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
 .mb-20 {
   margin-bottom: 5rem;
 }
@@ -795,9 +798,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mb-14 {
   margin-bottom: 3.5rem;
-}
-.ml-1 {
-  margin-left: 0.25rem;
 }
 .mr-6 {
   margin-right: 1.5rem;
@@ -846,12 +846,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mr-0 {
   margin-right: 0px;
-}
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-.ml-auto {
-  margin-left: auto;
 }
 .block {
   display: block;
@@ -904,9 +898,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-2 {
   width: 0.5rem;
 }
-.w-1\/3 {
-  width: 33.333333%;
-}
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -936,11 +927,11 @@ Ensure the default browser behavior of the `hidden` attribute.
      -moz-appearance: none;
           appearance: none;
 }
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
 .grid-cols-none {
   grid-template-columns: none;
+}
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -951,20 +942,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-wrap {
   flex-wrap: wrap;
 }
-.content-start {
-  align-content: flex-start;
-}
 .items-start {
   align-items: flex-start;
 }
 .items-center {
   align-items: center;
 }
-.justify-start {
-  justify-content: flex-start;
-}
 .justify-center {
   justify-content: center;
+}
+.gap-9 {
+  gap: 2.25rem;
 }
 .gap-5 {
   gap: 1.25rem;
@@ -974,9 +962,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .gap-3 {
   gap: 0.75rem;
-}
-.gap-9 {
-  gap: 2.25rem;
 }
 .rounded-full {
   border-radius: 9999px;
@@ -1105,6 +1090,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-\[18px\] {
   font-size: 18px;
 }
+.text-xxs {
+  font-size: 21px;
+  line-height: 32px;
+  letter-spacing: -1px;
+}
 .text-4xs {
   font-size: 13px;
   line-height: 24px;
@@ -1113,11 +1103,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.5px;
-}
-.text-xxs {
-  font-size: 21px;
-  line-height: 32px;
-  letter-spacing: -1px;
 }
 .italic {
   font-style: italic;
@@ -1154,20 +1139,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(25 25 25 / var(--tw-bg-opacity));
 }
-.k2-btn-cream, .k2-roundcon-cream {
+.k2-btn-dis, .k2-roundcon-dis {
   --tw-bg-opacity: 1;
   background-color: rgb(242 235 227 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(172 161 149 / var(--tw-text-opacity));
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-.k2-btn-cream:hover, .k2-roundcon-cream:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(172 161 149 / var(--tw-bg-opacity));
-  --tw-text-opacity: 1;
-  color: rgb(242 235 227 / var(--tw-text-opacity));
 }
 .k2-btn-black, .k2-roundcon-black {
   --tw-bg-opacity: 1;
@@ -1192,15 +1168,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(25 25 25 / var(--tw-text-opacity));
 }
-.k2-link-cream, .k2-linkon-cream {
+.k2-link-dis, .k2-linkon-dis {
   font-size: 21px;
   line-height: 24px;
   --tw-text-opacity: 1;
   color: rgb(172 161 149 / var(--tw-text-opacity));
-}
-.k2-link-cream:hover:hover, .k2-linkon-cream:hover:hover {
-  --tw-text-opacity: 1;
-  color: rgb(242 235 227 / var(--tw-text-opacity));
 }
 .k2-link-black, .k2-linkon-black {
   font-size: 21px;
@@ -1312,10 +1284,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 @media (min-width: 640px) {
 
-  .sm\:col-span-1 {
-    grid-column: span 1 / span 1;
-  }
-
   .sm\:mb-0 {
     margin-bottom: 0px;
   }
@@ -1352,16 +1320,16 @@ Ensure the default browser behavior of the `hidden` attribute.
     flex-basis: 16.666667%;
   }
 
-  .sm\:basis-1\/2 {
-    flex-basis: 50%;
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .sm\:grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
-  .sm\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .sm\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
   .sm\:flex-row {
